@@ -16,6 +16,7 @@ import com.gregtechceu.gtceu.utils.TagUtil;
 
 import net.minecraft.core.Holder;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
@@ -28,7 +29,6 @@ import net.minecraft.world.level.material.Fluid;
 import net.neoforged.neoforge.common.crafting.SizedIngredient;
 
 import com.mojang.datafixers.util.Pair;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
@@ -38,6 +38,7 @@ import java.util.stream.Collectors;
 import static com.gregtechceu.gtceu.api.GTValues.M;
 import static com.gregtechceu.gtceu.api.data.chemical.material.ItemMaterialData.*;
 
+@SuppressWarnings("unused")
 public class ChemicalHelper {
 
     public static @Nullable ItemMaterialInfo getMaterialInfo(@Nullable Object object) {
@@ -52,7 +53,7 @@ public class ChemicalHelper {
         } else if (object instanceof MaterialEntry entry) {
             var items = getItems(entry);
             if (!items.isEmpty()) {
-                return ItemMaterialData.getMaterialInfo(items.get(0));
+                return ItemMaterialData.getMaterialInfo(items.getFirst());
             }
         } else if (object instanceof Ingredient ing) {
             if (!ing.isCustom()) {
@@ -77,7 +78,7 @@ public class ChemicalHelper {
         return getMaterialStack(itemStack.getItem());
     }
 
-    public static MaterialStack getMaterialStack(@NotNull MaterialEntry entry) {
+    public static MaterialStack getMaterialStack(MaterialEntry entry) {
         Material entryMaterial = entry.material();
         if (!entryMaterial.isNull()) {
             return new MaterialStack(entryMaterial, entry.tagPrefix().getMaterialAmount(entryMaterial));
@@ -107,13 +108,13 @@ public class ChemicalHelper {
                 if (material.hasProperty(PropertyKey.FLUID)) {
                     FluidProperty property = material.getProperty(PropertyKey.FLUID);
                     FluidStorageKey.allKeys().stream()
-                            .map(property::get)
+                            .map(Objects.requireNonNull(property)::get)
                             .filter(Objects::nonNull)
                             .map(f -> Pair.of(f, TagUtil.createFluidTag(BuiltInRegistries.FLUID.getKey(f).getPath())))
                             .filter(pair -> allFluidTags.contains(pair.getSecond()))
                             .forEach(pair -> {
                                 allFluidTags.remove(pair.getSecond());
-                                FLUID_MATERIAL.put(pair.getFirst(), material);
+                                FLUID_MATERIAL.put(Objects.requireNonNull(pair.getFirst()), material);
                             });
                 }
             }
@@ -199,7 +200,8 @@ public class ChemicalHelper {
 
             // guess an entry based on the item's tags if none are pre-registered.
             materialEntry = ITEM_MATERIAL_ENTRY_COLLECTED.computeIfAbsent(itemKey, item -> {
-                for (TagKey<Item> itemTag : item.asItem().builtInRegistryHolder().tags().toList()) {
+                ResourceKey<Item> itemResourceKey = BuiltInRegistries.ITEM.getResourceKey(item).orElseThrow();
+                for (TagKey<Item> itemTag : BuiltInRegistries.ITEM.getHolderOrThrow(itemResourceKey).tags().toList()) {
                     MaterialEntry materialEntry1 = getMaterialEntry(itemTag);
                     // check that it's not the empty marker and that it's not a parent tag
                     if (!materialEntry1.isEmpty() &&
@@ -309,7 +311,7 @@ public class ChemicalHelper {
     }
 
     @Nullable
-    public static TagKey<Block> getBlockTag(TagPrefix orePrefix, @NotNull Material material) {
+    public static TagKey<Block> getBlockTag(TagPrefix orePrefix, Material material) {
         var tags = orePrefix.getBlockTags(material);
         if (!tags.isEmpty()) {
             return tags.getFirst();
@@ -326,7 +328,7 @@ public class ChemicalHelper {
         return null;
     }
 
-    public static List<TagKey<Item>> getTags(TagPrefix orePrefix, @NotNull Material material) {
+    public static List<TagKey<Item>> getTags(TagPrefix orePrefix, Material material) {
         return orePrefix.getItemTags(material);
     }
 
